--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,7 +21,7 @@
                 <table width="50%" align="center">
                     <thead>
                     <tr>
-                        <th th:width="150">👨‍🦯老公家务</th>
+                        <th th:width="200">👨‍🦯老公家务</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -38,7 +38,7 @@
                 <table  width="50%" align="center">
                     <thead>
                     <tr>
-                        <th th:width="150">👩‍🦯老婆家务</th>
+                        <th th:width="200">👩‍🦯老婆家务</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -59,9 +59,12 @@
 </body>
 <style>
     body {
-        color: white; /*字体颜色黑色*/
+        color: white;
         background: orange;
         text-align: center;
+    }
+    tbody{
+        font-size:40px;
     }
 </style>
 </html>
